src/network_policies/test1default-fluidos-consumer-fe7e79908bd98f3c1aea59109b8d1174bb33c18a71a6fba8c8cc23cb6321b9294a36ee Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-fe7e79908bd98f3c1aea59109b8d1174bb33c18a71a6fba8c8cc23cb6321b9294a36ee
  namespace: default-fluidos-consumer-fe7e79
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-fe7e79
      podSelector:
        matchLabels:
          app: product-catalogue
